infrastructure.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: This template will deploy a Cloud Map private DNS namespace which
  allows services to find each other without going through the ALB. An S3 bucket
  containing configuration files used by the services. Changes to the
  configuration files will notify SNS which will later trigger a lambda to
  re-deploy the service. Finally there is a CloudWatch log group which the
  different services will send their application logs to.

Parameters:
  ApplicationTag:
    Type: String
    Description: Used to tag all resources
  LogsRetention:
    Type: Number
    Description: Number of days that application logs are saved
  PrivateHostedZoneName:
    Type: String
    Description: Private HostedZone Name
  PublicLoadBalancerSecurityGroup:
    Type: String
    Description: Public Loadbalancer SecurityGroup
  Vpc:
    Type: String
    Description: VPC ID

Resources:
  PrivateDnsNamespace:
    Type: AWS::ServiceDiscovery::PrivateDnsNamespace
    Properties:
      Description: Discovery Service for Hazelcast
      Name: !Ref PrivateHostedZoneName
      Vpc: !Ref Vpc
      Tags:
        - Key: application
          Value: !Ref ApplicationTag

  ######################## CloudWatch Log Group #######################
  #####################################################################
  LogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: "accurate-video"
      RetentionInDays: !Ref LogsRetention

  ######################### Security Groups ###########################
  #####################################################################
  AdapterRdsDbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Access to the Adapter RDS DB instance
      VpcId: !Ref Vpc
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
        - Key: Name
          Value: AccurateVideo - Adapter RDS SG

  AdapterRdsDbSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Access from Adapter service
      IpProtocol: tcp
      FromPort: 5432
      ToPort: 5432
      SourceSecurityGroupId: !Ref AdapterSecurityGroup
      GroupId: !Ref AdapterRdsDbSecurityGroup

  KeycloakRdsDbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Access to the Keycloak RDS DB instance
      VpcId: !Ref Vpc
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
        - Key: Name
          Value: AccurateVideo - Keycloak RDS SG

  KeycloakRdsDbSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Access from Keycloak service
      IpProtocol: tcp
      FromPort: 5432
      ToPort: 5432
      SourceSecurityGroupId: !Ref KeycloakSecurityGroup
      GroupId: !Ref KeycloakRdsDbSecurityGroup

  AdapterSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Access to Adapter service
      VpcId: !Ref Vpc
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
        - Key: Name
          Value: AccurateVideo - Adapter SG

  AdapterSecurityGroupIngressAlb:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Access from the public ALB
      IpProtocol: tcp
      FromPort: 8080
      ToPort: 8080
      SourceSecurityGroupId: !Ref PublicLoadBalancerSecurityGroup
      GroupId: !Ref AdapterSecurityGroup

  AdapterSecurityGroupIngressJobs:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Access from the Jobs service
      IpProtocol: tcp
      FromPort: 8080
      ToPort: 8080
      SourceSecurityGroupId: !Ref JobsSecurityGroup
      GroupId: !Ref AdapterSecurityGroup

  AdapterSecurityGroupIngressJobsHazelcast:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Access from the Jobs service
      IpProtocol: tcp
      FromPort: 5699
      ToPort: 5702
      SourceSecurityGroupId: !Ref JobsSecurityGroup
      GroupId: !Ref AdapterSecurityGroup

  AdapterSecurityGroupIngressAdapterHazelcast:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Access from the Adapter service
      IpProtocol: tcp
      FromPort: 5699
      ToPort: 5702
      SourceSecurityGroupId: !Ref AdapterSecurityGroup
      GroupId: !Ref AdapterSecurityGroup

  FrontendSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Access to Frontend service
      VpcId: !Ref Vpc
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
        - Key: Name
          Value: AccurateVideo - Frontend SG

  FrontendSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Access from the public ALB
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      SourceSecurityGroupId: !Ref PublicLoadBalancerSecurityGroup
      GroupId: !Ref FrontendSecurityGroup

  AnalyzeSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Access to Analyze service
      VpcId: !Ref Vpc
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
        - Key: Name
          Value: AccurateVideo - Analyze SG

  AnalyzeSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Access from the public ALB
      IpProtocol: tcp
      FromPort: 8080
      ToPort: 8080
      SourceSecurityGroupId: !Ref PublicLoadBalancerSecurityGroup
      GroupId: !Ref AnalyzeSecurityGroup

  JobsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Database access from adapter/backend
      VpcId: !Ref Vpc
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
        - Key: Name
          Value: AccurateVideo - Jobs SG

  JobsSecurityGroupIngressAdapterHazelcast:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Access from the Adapter service
      IpProtocol: tcp
      FromPort: 5699
      ToPort: 5702
      SourceSecurityGroupId: !Ref AdapterSecurityGroup
      GroupId: !Ref JobsSecurityGroup

  JobsSecurityGroupIngressJobsHazelcast:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Access from the Jobs service
      IpProtocol: tcp
      FromPort: 5699
      ToPort: 5702
      SourceSecurityGroupId: !Ref JobsSecurityGroup
      GroupId: !Ref JobsSecurityGroup

  KeycloakSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Database access from adapter/backend
      VpcId: !Ref Vpc
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
        - Key: Name
          Value: AccurateVideo - Keycloak SG

  KeycloakSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Access from the public ALB
      IpProtocol: tcp
      FromPort: 8080
      ToPort: 8080
      SourceSecurityGroupId: !Ref PublicLoadBalancerSecurityGroup
      GroupId: !Ref KeycloakSecurityGroup

Outputs:
  LogGroup:
    Description: The name of the Log Group
    Value: !Ref LogGroup
  AdapterRdsDbSecurityGroup:
    Description: Security group for the Adapter RDS instance
    Value: !Ref AdapterRdsDbSecurityGroup
  AdapterSecurityGroup:
    Description: Security group for the Adapter service
    Value: !Ref AdapterSecurityGroup
  FrontendSecurityGroup:
    Description: Security group for the Frontend service
    Value: !Ref FrontendSecurityGroup
  AnalyzeSecurityGroup:
    Description: Security group for the Analyze service
    Value: !Ref AnalyzeSecurityGroup
  JobsSecurityGroup:
    Description: Security group for the Jobs service
    Value: !Ref JobsSecurityGroup
  PrivateDnsNamespace:
    Description: Private DNS Namespace
    Value: !Ref PrivateDnsNamespace
  KeycloakSecurityGroup:
    Description: Security group for the Keycloak service
    Value: !Ref KeycloakSecurityGroup
  KeycloakRdsDbSecurityGroup:
    Description: "Security group for the Keycloak RDS instance"
    Value: !Ref KeycloakRdsDbSecurityGroup
