vpc.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: This template will deploy a stack containing a VPC with public
  and private subnets.

Parameters:
  ApplicationTag:
    Type: String
    Description: Used to tag all resources
  VpcCidr:
    Type: String
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
    Description: CIDR block for VPC, for example 10.0.0.0/16
  NumberOfAvailabilityZones:
    Type: String
    AllowedValues:
      - "two"
      - "three"

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "Network configuration"
        Parameters:
          - VpcCidr
          - NumberOfAvailabilityZones
      - Label:
          default: "Other"
        Parameters:
          - ApplicationTag

Conditions:
  UseThreeAz: !Equals [!Ref NumberOfAvailabilityZones, "three"]

Resources:
  ############################## VPC #############################
  ################################################################
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: !Ref VpcCidr
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
        - Key: Name
          Value: AV VPC

  ######################## Public Subnets ########################
  ################################################################
  PublicSubnetOne:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: { Ref: AWS::Region }
      VpcId: !Ref Vpc
      CidrBlock: !Select [0, !Cidr [!GetAtt Vpc.CidrBlock, 6, 8]]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
        - Key: Name
          Value: AV Public One
  PublicSubnetTwo:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: { Ref: AWS::Region }
      VpcId: !Ref Vpc
      CidrBlock: !Select [1, !Cidr [!GetAtt Vpc.CidrBlock, 6, 8]]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
        - Key: Name
          Value: AV Public Two
  PublicSubnetThree:
    Type: AWS::EC2::Subnet
    Condition: UseThreeAz
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 2
          - Fn::GetAZs: { Ref: AWS::Region }
      VpcId: !Ref Vpc
      CidrBlock: !Select [2, !Cidr [!GetAtt Vpc.CidrBlock, 6, 8]]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
        - Key: Name
          Value: AV Public Three

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
  GatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref "InternetGateway"
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: GatewayAttachment
    Properties:
      RouteTableId: !Ref "PublicRouteTable"
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref "InternetGateway"
  PublicSubnetOneRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetOne
      RouteTableId: !Ref PublicRouteTable
  PublicSubnetTwoRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetTwo
      RouteTableId: !Ref PublicRouteTable
  PublicSubnetThreeRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: UseThreeAz
    Properties:
      SubnetId: !Ref PublicSubnetThree
      RouteTableId: !Ref PublicRouteTable

  ######################## Private Subnets #######################
  ################################################################
  PrivateSubnetOne:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: { Ref: AWS::Region }
      VpcId: !Ref Vpc
      CidrBlock: !Select [3, !Cidr [!GetAtt Vpc.CidrBlock, 6, 8]]
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
        - Key: Name
          Value: AV Private One
  PrivateSubnetTwo:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: { Ref: AWS::Region }
      VpcId: !Ref Vpc
      CidrBlock: !Select [4, !Cidr [!GetAtt Vpc.CidrBlock, 6, 8]]
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
        - Key: Name
          Value: AV Private Two
  PrivateSubnetThree:
    Type: AWS::EC2::Subnet
    Condition: UseThreeAz
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 2
          - Fn::GetAZs: { Ref: AWS::Region }
      VpcId: !Ref Vpc
      CidrBlock: !Select [5, !Cidr [!GetAtt Vpc.CidrBlock, 6, 8]]
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
        - Key: Name
          Value: AV Private Three

  ElasticIpOne:
    Type: AWS::EC2::EIP
    DependsOn: GatewayAttachment
    Properties:
      Domain: vpc
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
  ElasticIpTwo:
    Type: AWS::EC2::EIP
    DependsOn: GatewayAttachment
    Properties:
      Domain: vpc
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
  ElasticIpThree:
    Type: AWS::EC2::EIP
    Condition: UseThreeAz
    DependsOn: GatewayAttachment
    Properties:
      Domain: vpc
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
  NatGatewayOne:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt ElasticIpOne.AllocationId
      SubnetId: !Ref PublicSubnetOne
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
  NatGatewayTwo:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt ElasticIpTwo.AllocationId
      SubnetId: !Ref PublicSubnetTwo
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
  NatGatewayThree:
    Type: AWS::EC2::NatGateway
    Condition: UseThreeAz
    Properties:
      AllocationId: !GetAtt ElasticIpThree.AllocationId
      SubnetId: !Ref PublicSubnetThree
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
  PrivateRouteTableOne:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
  PrivateRouteOne:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTableOne
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayOne
  PrivateRouteTableOneAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTableOne
      SubnetId: !Ref PrivateSubnetOne
  PrivateRouteTableTwo:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
  PrivateRouteTwo:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTableTwo
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayTwo
  PrivateRouteTableTwoAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTableTwo
      SubnetId: !Ref PrivateSubnetTwo
  PrivateRouteTableThree:
    Type: AWS::EC2::RouteTable
    Condition: UseThreeAz
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: application
          Value: !Ref ApplicationTag
  PrivateRouteThree:
    Type: AWS::EC2::Route
    Condition: UseThreeAz
    Properties:
      RouteTableId: !Ref PrivateRouteTableThree
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayThree
  PrivateRouteTableThreeAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: UseThreeAz
    Properties:
      RouteTableId: !Ref PrivateRouteTableThree
      SubnetId: !Ref PrivateSubnetThree

  ######################### VPC Endpoints ########################
  ################################################################
  VpcEndpointS3:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Action: "*"
            Principal: "*"
            Resource: "*"
      RouteTableIds:
        - !Ref PrivateRouteTableOne
        - !Ref PrivateRouteTableTwo
        - !If
          - UseThreeAz
          - !Ref PrivateRouteTableThree
          - !Ref AWS::NoValue
      ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
      VpcEndpointType: Gateway
      VpcId: !Ref Vpc

Outputs:
  VpcId:
    Description: The ID of the VPC that this stack is deployed in
    Value: !Ref Vpc
  PrivateSubnets:
    Description: Private subnets in the VPC
    Value: !If [ UseThreeAz , !Join [ ",", [ !Ref PrivateSubnetOne, !Ref PrivateSubnetTwo, !Ref PrivateSubnetThree ] ] , !Join [ ",", [ !Ref PrivateSubnetOne, !Ref PrivateSubnetTwo] ] ]
  PublicSubnets:
    Description: Public subnets in the VPC
    Value: !If [ UseThreeAz , !Join [ ",", [ !Ref PublicSubnetOne, !Ref PublicSubnetTwo, !Ref PublicSubnetThree ] ] , !Join [ ",", [ !Ref PublicSubnetOne, !Ref PublicSubnetTwo] ] ]
